--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Delta-2</title>
 </head>
 <body>
-    <h1>Main 1st heading</h1>
+    <h1>Feature 1st heading commit:1</h1>
 </body>
 </html>
